[workspace]
members = [".", "tdf-derive"]

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Jacobtread <jacobtread@gmail.com>"]
repository = "https://github.com/jacobtread/tdf"
readme = "README.md"


[package]
name = "tdf"
version = "0.0.0"
keywords = ["EA", "serialization", "packet", "blazepk"]
categories = ["network-programming", "parser-implementations"]

edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true


[dependencies]
bytes = "1"
serde = { version = "1.0", optional = true }
bitflags = "^2.3"

[features]
# Default features enables BlazeSSL and serde
default = ["serde"]
# Type serialization with serde
serde = ["dep:serde"]
