[workspace]
members = [".", "./tdf-derive"]

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Jacobtread <jacobtread@gmail.com>"]
repository = "https://github.com/jacobtread/tdf"
readme = "README.md"


[package]
name = "tdf"
version = "0.0.0"
keywords = ["EA", "serialization", "packet", "blazepk"]
categories = ["network-programming", "parser-implementations"]
description = "Library for parsing Tdf values from BlazeSDK"

edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true


[dependencies]
bytes = { version = "1", optional = true }
serde = { version = "1.0", optional = true }
bitflags = "^2.3"
tdf-derive = { path = "./tdf-derive", optional = true }

[features]
# Default features enables BlazeSSL and serde
default = ["serde", "bytes", "derive"]
# Type serialization with serde
serde = ["dep:serde"]
# BytesMut writer implementation
bytes = ["dep:bytes"]
# Derive macros
derive = ["dep:tdf-derive"]
