[package]
name = "tdf-derive"
version = "0.0.0"
description = "Derive macros for working with tdfs"

edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true


[dependencies]
darling = "0.20"
quote = "1"
syn = { version = "2", features = ["full"] }
proc-macro2 = "1"

[lib]
proc-macro = true
